# bazel_wsc

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  WORKSPACE  workspace_status.bat  workspace_status_command.cc  wsc.cc
.buildkite/: pipeline.yml
.wsc/: wsc.cmd  wsc.sh
bazel/: copts.bzl
package/: WORKSPACE  workspace_status.cmd  workspace_status.sh
patches/: boost_process_windows_file_descriptor.patch
