load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "wsc",
    srcs = ["wsc.cc"],
    copts = select({
        "@bazel_tools//tools/cpp:msvc": ["/std:c++20"],
        "//conditions:default": ["-std=c++20"],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "@libgit2",
    ],
)
